Bug 156616 - SVG: incorrect text alignment
Summary: SVG: incorrect text alignment
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords:
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2023-08-04 18:23 UTC by Xisco Faulí
Modified: 2023-08-15 17:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (846 bytes, image/svg+xml)
2023-08-04 18:23 UTC, Xisco Faulí
Details
LibreOffice vs Firefox (52.60 KB, image/png)
2023-08-04 18:25 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-08-04 18:23:59 UTC
Created attachment 188778 [details]
sample file

Steps to reproduce:
1. Open attached document and compare

Reproduced with

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2b0b4ddc8bd8fdd4cd689300620fe4621d7533b7
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-08-04 18:25:12 UTC
Created attachment 188779 [details]
LibreOffice vs Firefox
Comment 2 Xisco Faulí 2023-08-04 18:25:49 UTC
This issue is related to 2795a230464aea3a792e67b5625fce2a0c01d547
Comment 3 Commit Notification 2023-08-12 08:00:36 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dcb3cb0bd4e4bf2bed05ae3b9d370e17a331a9b1

tdf#156616: check if character's parent has x or y

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 BogdanB 2023-08-12 12:05:36 UTC
It's ok now.
Verified with Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9d322bfa580839f48d2f4ce6cdd6b18c8253af85
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 5 Commit Notification 2023-08-15 17:02:17 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/87e0ac2b92f7a7aac16bf66d2379688238496a75

tdf#156616: check if character's parent has x or y

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.